refactor(modernization): decouple service interfaces, add screaming error handling, modernize controllers & expand test suites
- Decouple all concrete service implementations into interfaces (WebAuthn, DatabaseSnapshot, FileDbSync, HuggingFaceDatabaseFailover, JwtService, RateLimiterService)
- Eliminate silent failures with screaming domain exceptions (BadRequestException, ConflictException, EmailDeliveryException, ResourceNotFoundException)
- Modernize all 12 controllers and service implementations with Lombok @Slf4j and @RequiredArgsConstructor
- Enforce declarative class-level readOnly transactional boundaries and explicit mutating @Transactional methods
- Synchronize fallback defaults (INR, monthly frequency) between backend and frontend
- Add comprehensive BDD Cucumber feature suites for Budgets, Incomes, Categories, Savings Goals (44 scenarios, 306 steps)
- Implement MockMvc test suites for ReportController and HealthController
- Implement unit tests for RecurringExpenseScheduler, RecurringIncomeScheduler, and RecurringSavingsScheduler
- Add Playwright E2E suites for Budgets and Incomes (e2e/tests/budgets.spec.ts, e2e/tests/incomes.spec.ts)
- Document Module 14 in MODERNIZATION_AUDIT_HANDOFF.md